# system-design-labs

./: .gitignore  README.md
twitter/: README.md  TRADEOFFS.md
twitter/backend/: compose.dev.yaml  compose.prod.yaml  compose.yaml
twitter/backend/gateway/: nginx.conf  nginx.prod.conf
twitter/backend/services/search-service/: pyproject.toml
twitter/backend/services/search-service/app/: config.py  indexer_worker.py  main.py  opensearch_client.py  redis_clients.py  schemas.py  typesense_client.py
twitter/backend/services/timeline-service/: Dockerfile  pyproject.toml
twitter/backend/services/timeline-service/app/: config.py  fanout_worker.py  main.py  redis_clients.py  schemas.py
twitter/backend/services/tweet-service/: Dockerfile  pyproject.toml
twitter/backend/services/user-service/: pyproject.toml
twitter/backend/services/user-service/app/: config.py  main.py  models.py  schemas.py
twitter/frontend/: index.html  package-lock.json  package.json  vite.config.js
twitter/frontend/src/: App.jsx  index.css
twitter/frontend/src/api/: client.js
twitter/frontend/src/components/: Avatar.jsx  AvatarUploadButton.jsx  ComposeBox.jsx  ConfirmDialog.jsx  EmptyState.jsx  Nav.jsx  NotificationRow.jsx  PeopleList.jsx  ReplyRow.jsx  RightPanel.jsx  Sidebar.jsx  TweetCard.jsx  UserList.jsx  icons.jsx
twitter/frontend/src/context/: UserContext.jsx
twitter/frontend/src/hooks/: useAuthor.js  useLikeToggle.js  useTweet.js
twitter/frontend/src/pages/: Discover.jsx  Follow.jsx  IdentityGate.jsx  Notifications.jsx  Post.jsx  Profile.jsx  Search.jsx  Timeline.jsx  (+1 more)
(+9 files in other folders)
