[project]
name = "timeline-service"
version = "0.1.0"
description = "Timeline service for the toy Twitter system design lab"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false
