[project]
name = "user-service"
version = "0.1.0"
description = "User service for the toy Twitter system design lab"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.50",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false
